changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Update svn:ignore property for various directories in the server source,
in order to make it simpler to work with.
 (Lots of directories in the source tree, too many to list here)
Arvid Norlander 2008-05-20

Apply Patch #1966455: Fix for cut off NPC dialog messages.
 common/dialog.c
Arvid Norlander 2008-05-20

Apply Patch #1966113: Fix uninitialised range vector in monster.c.
 server/monster.c
Arvid Norlander 2008-05-20

Increase base book max size, to try to get more various messages.
 include/book.h
Nicolas Weeger 2008-05-19

Apply Patch #1967076: Fix crash in use command.
 command/c_object.c
Arvid Norlander 2008-05-19

Apply patch #1965969: Unit test for common/path.c.
 common/path.c
 test/unit/common/check_path.c Makefile.am
Arvid Norlander 2008-05-17

Apply patch #1964563: Fix compile error when "MEMORY_DEBUG" is defined in config.h.
 server/server.c
Arvid Norlander 2008-05-16

Apply patch #1964058: Fix missing \0 in buffer in add_object_to_socklist.
 socket/item.c
Arvid Norlander 2008-05-16

Apply patch #1964051: Valgrind error fix: Bad format string.
 lib/i18n/messages.en messages.fr
Arvid Norlander 2008-05-16

Fix incorrect boundary of the object type array, courtesy of Arvid Norlander.
 include/define.h
Yann "gros" Chachkoff 2008-05-16

Fix memory leaks, courtesy Arvid Norlander.
 common/dialog.c
Andreas Kirschbaum 2008-05-23

Added the possibility to build the server outside of its source directory.
 plugins/citylife/Makefile.am
 plugins/cfrhg/Makefile.am
 plugins/template/Makefile.am
 plugins/cfnewspaper/Makefile.am
Arvid Norlander 2008-05-14
